date changes in awb sales

--- a/src/app/admin/dashboard/operationsdashboard/operationsdashboard.component.html
+++ b/src/app/admin/dashboard/operationsdashboard/operationsdashboard.component.html
@@ -33,87 +33,87 @@
         <div class="col-lg-3 col-md-3 col-sm-12">
           <div class="card card-statistic-2">
             <div class="clearfix">
-              <div class="card-icon-only shadow-primary float-start">
+              <!-- <div class="card-icon-only shadow-primary float-start">
                 <img src="assets/images/pages/blood-pressure.png" alt="">
-              </div>
+              </div> -->
               <div class="card-right">
                 <div>
                   <h5 class="float-end">Unpaid Sales Bills</h5>
                 </div>
-                <div class="col-green">
+                <!-- <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0"> 110/70</h3>
-                </div>
+                </div> -->
               </div>
             </div>
-            <div class="card-content msl-4 mb-3">
+            <!-- <div class="card-content msl-4 mb-3">
               <p class="m-b-0 d-flex"><i class="material-icons col-green psr-2">trending_up</i> 10% Higher Then Last Month
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
           <div class="card card-statistic-2">
             <div class="clearfix">
-              <div class="card-icon-only shadow-primary float-start">
+              <!-- <div class="card-icon-only shadow-primary float-start">
                 <img src="assets/images/pages/heart-rate.png" alt="">
-              </div>
+              </div> -->
               <div class="card-right">
                 <div>
                   <h5 class="float-end">Unpaid Cash Bills</h5>
                 </div>
-                <div class="col-green">
+                <!-- <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">650</h3>
-                </div>
+                </div> -->
               </div>
             </div>
-            <div class="card-content msl-4 mb-3">
+            <!-- <div class="card-content msl-4 mb-3">
               <p class="m-b-0 d-flex"><i class="material-icons col-orange psr-2">trending_down</i> 07% Less Then Last
                 Month
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
           <div class="card card-statistic-2">
             <div class="clearfix">
-              <div class="card-icon-only shadow-primary float-start">
+              <!-- <div class="card-icon-only shadow-primary float-start">
                 <img src="assets/images/pages/glucose.png" alt="">
-              </div>
+              </div> -->
               <div class="card-right">
                 <div>
                   <h5 class="float-end">Unpaid Expe.Bills Cr.</h5>
                 </div>
-                <div class="col-green">
+                <!-- <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">88-75</h3>
-                </div>
+                </div> -->
               </div>
             </div>
-            <div class="card-content msl-4 mb-3">
+            <!-- <div class="card-content msl-4 mb-3">
               <p class="m-b-0 d-flex"><i class="material-icons col-green psr-2">trending_up</i> 12% Higher Then Last Month
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12">
           <div class="card card-statistic-2">
             <div class="clearfix">
-              <div class="card-icon-only shadow-primary float-start">
+              <!-- <div class="card-icon-only shadow-primary float-start">
                 <img src="assets/images/pages/blood-count.png" alt="">
-              </div>
+              </div> -->
               <div class="card-right">
                 <div>
                   <h5 class="float-end">Unpaid Expenses Cash</h5>
                 </div>
-                <div class="col-green">
+                <!-- <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">9,456/mL</h3>
-                </div>
+                </div> -->
               </div>
             </div>
-            <div class="card-content msl-4 mb-3">
+            <!-- <div class="card-content msl-4 mb-3">
               <p class="m-b-0 d-flex"><i class="material-icons col-orange psr-2">trending_down</i> 22% Less Then Last
                 Month
               </p>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -123,16 +123,16 @@
             <div class="card-body">
               <div class="float-start">
                 <h6 class="text-muted">Expenses Chart Weekly</h6>
-                <h5>72 bmp <span class="text-muted font-12">(Average)</span></h5>
+                <!-- <h5>72 bmp <span class="text-muted font-12">(Average)</span></h5> -->
               </div>
-              <div class="mb-5">
+              <!-- <div class="mb-5">
                 <apx-chart [series]="restRateChartOptions.series" [chart]="restRateChartOptions.chart"
                   [xaxis]="restRateChartOptions.xaxis" [stroke]="restRateChartOptions.stroke"
                   [colors]="restRateChartOptions.colors" [dataLabels]="restRateChartOptions.dataLabels"
                   [legend]="restRateChartOptions.legend" [markers]="restRateChartOptions.markers"
                   [grid]="restRateChartOptions.grid" [yaxis]="restRateChartOptions.yaxis"
                   [tooltip]="restRateChartOptions.tooltip" [title]="restRateChartOptions.title"></apx-chart>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -141,16 +141,16 @@
             <div class="card-body">
               <div class="float-start">
                 <h6 class="text-muted">Expenses Chart Monthly</h6>
-                <h5>129 bmp <span class="text-muted font-12">(Average)</span></h5>
+                <!-- <h5>129 bmp <span class="text-muted font-12">(Average)</span></h5> -->
               </div>
-              <div class="mb-5">
+              <!-- <div class="mb-5">
                 <apx-chart [series]="performanceRateChartOptions.series" [chart]="performanceRateChartOptions.chart"
                   [xaxis]="performanceRateChartOptions.xaxis" [stroke]="performanceRateChartOptions.stroke"
                   [colors]="performanceRateChartOptions.colors" [dataLabels]="performanceRateChartOptions.dataLabels"
                   [legend]="performanceRateChartOptions.legend" [markers]="performanceRateChartOptions.markers"
                   [grid]="performanceRateChartOptions.grid" [yaxis]="performanceRateChartOptions.yaxis"
                   [tooltip]="performanceRateChartOptions.tooltip" [title]="performanceRateChartOptions.title"></apx-chart>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <div class="header">
               <h2>Top Unpaid Bills</h2>
             </div>
-            <div class="body">
+            <!-- <div class="body">
               <div class="table-responsive">
                 <table class="table table-borderless medicine-list">
                   <tr>
@@ -209,7 +209,7 @@
               <div class="text-center p-t-20">
                 <button mat-stroked-button color="primary">Report Adverse Effect</button>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -219,7 +219,7 @@
             <div class="body">
               <mat-tab-group dynamicHeight>
                 <mat-tab label="Unbilled Shipments">
-                  <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
+                  <!-- <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
                     <li class="app-list">
                       <img alt="image" class="rounded-circle" width="40" src="assets/images/user/usrbig1.jpg">
                       <div class="set-flex">
@@ -394,10 +394,10 @@
                         </td>
                       </div>
                     </li>
-                  </ul>
+                  </ul> -->
                 </mat-tab>
                 <mat-tab label="Unpaid Invoices">
-                  <ul class="list-unstyled user-progress list-unstyled-border list-unstyled-noborder">
+                  <!-- <ul class="list-unstyled user-progress list-unstyled-border list-unstyled-noborder">
                     <li class="app-list">
                       <img alt="image" class="rounded-circle" width="40" src="assets/images/user/usrbig7.jpg">
                       <div class="set-flex">
@@ -572,7 +572,7 @@
                         </td>
                       </div>
                     </li>
-                  </ul>
+                  </ul> -->
                 </mat-tab>
               </mat-tab-group>
             </div>
@@ -583,7 +583,7 @@
             <div class="header">
               <h2>Invoices/Documents</h2>
             </div>
-            <div class="body">
+            <!-- <div class="body">
               <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
                 <li class="report-list">
                   <div class="d-flex">
@@ -658,7 +658,7 @@
                   </div>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
