--- a/src/app/admin/dashboard/salesdashboard/salesdashboard.component.html
+++ b/src/app/admin/dashboard/salesdashboard/salesdashboard.component.html
@@ -122,10 +122,10 @@
               </mat-menu>
             </div>
             <div class="body">
-              <apx-chart [series]="areaChartOptions.series" [chart]="areaChartOptions.chart"
+              <!-- <apx-chart [series]="areaChartOptions.series" [chart]="areaChartOptions.chart"
                 [xaxis]="areaChartOptions.xaxis" [yaxis]="areaChartOptions.yaxis" [colors]="areaChartOptions.colors"
                 [stroke]="areaChartOptions.stroke" [legend]="areaChartOptions.legend" [tooltip]="areaChartOptions.tooltip"
-                [dataLabels]="areaChartOptions.dataLabels"></apx-chart>
+                [dataLabels]="areaChartOptions.dataLabels"></apx-chart> -->
             </div>
           </div>
         </div>
@@ -152,11 +152,11 @@
               </mat-menu>
             </div>
             <div class="body">
-              <apx-chart [series]="barChartOptions.series" [chart]="barChartOptions.chart"
+              <!-- <apx-chart [series]="barChartOptions.series" [chart]="barChartOptions.chart"
                 [dataLabels]="barChartOptions.dataLabels" [plotOptions]="barChartOptions.plotOptions"
                 [responsive]="barChartOptions.responsive" [xaxis]="barChartOptions.xaxis"
                 [tooltip]="barChartOptions.tooltip" [legend]="barChartOptions.legend" [fill]="barChartOptions.fill">
-              </apx-chart>
+              </apx-chart> -->
             </div>
           </div>
         </div>
@@ -198,7 +198,7 @@
                       <th>Actions </th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <!-- <tbody>
                     <tr>
                       <td class="table-img">
                         <img src="assets/images/user/user1.jpg" alt="">
@@ -313,7 +313,7 @@
                         </button>
                       </td>
                     </tr>
-                  </tbody>
+                  </tbody> -->
                 </table>
               </div>
             </div>
@@ -352,7 +352,7 @@
                       <th>Entries</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <!-- <tbody>
                     <tr>
                       <td class="table-img">
                         <img src="assets/images/user/user5.jpg" alt="">
@@ -431,7 +431,7 @@
                         <div class="badge badge-solid-green">Available</div>
                       </td>
                     </tr>
-                  </tbody>
+                  </tbody> -->
                 </table>
               </div>
             </div>
@@ -476,7 +476,7 @@
                       <th>Actions</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <!-- <tbody>
                     <tr>
                       <td class="table-img">
                         <img src="assets/images/user/user8.jpg" alt="">
@@ -675,7 +675,7 @@
                         </button>
                       </td>
                     </tr>
-                  </tbody>
+                  </tbody> -->
                 </table>
               </div>
             </div>
