--- a/src/app/admin/dashboard/accountsdashboard/accountsdashboard.component.html
+++ b/src/app/admin/dashboard/accountsdashboard/accountsdashboard.component.html
@@ -2,7 +2,7 @@
     <div class="content-block">
       <div class="block-header">
         <!-- breadcrumb -->
-        <app-breadcrumb [title]="'Dashboad 2'" [items]="[]" [active_item]="'Operations'"></app-breadcrumb>
+        <app-breadcrumb [title]="'Dashboad'" [items]="[]" [active_item]="'Operations'"></app-breadcrumb>
       </div>
       <div class="row clearfix">
         <!-- Bar chart with line -->
@@ -13,12 +13,12 @@
             </div>
             <div class="body">
               <div class="recent-report__chart">
-                <apx-chart [series]="lineChartOptions.series" [chart]="lineChartOptions.chart"
+                <!-- <apx-chart [series]="lineChartOptions.series" [chart]="lineChartOptions.chart"
                   [xaxis]="lineChartOptions.xaxis" [stroke]="lineChartOptions.stroke" [colors]="lineChartOptions.colors"
                   [dataLabels]="lineChartOptions.dataLabels" [legend]="lineChartOptions.legend"
                   [tooltip]="lineChartOptions.tooltip" [markers]="lineChartOptions.markers" [grid]="lineChartOptions.grid"
                   [yaxis]="lineChartOptions.yaxis" [title]="lineChartOptions.title" [fill]="lineChartOptions.fill">
-                </apx-chart>
+                </apx-chart> -->
               </div>
             </div>
           </div>
@@ -31,21 +31,21 @@
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
-                  <p>105</p>
+                  <!-- <p>105</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Week</label>
-                  <p>825</p>
+                  <!-- <p>825</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Month</label>
-                  <p>22,067</p>
+                  <!-- <p>22,067</p> -->
                 </div>
               </div>
-              <div class="progress shadow-style">
+              <!-- <div class="progress shadow-style">
                 <div class="progress-bar l-bg-orange width-per-74" role="progressbar" aria-valuenow="74" aria-valuemin="0"
                   aria-valuemax="100">74%</div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="plain-card">
@@ -54,21 +54,21 @@
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
-                  <p>$1,247</p>
+                  <!-- <p>$1,247</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Week</label>
-                  <p>$22,568</p>
+                  <!-- <p>$22,568</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Month</label>
-                  <p>$65,147</p>
+                  <!-- <p>$65,147</p> -->
                 </div>
               </div>
-              <div class="progress shadow-style">
+              <!-- <div class="progress shadow-style">
                 <div class="progress-bar l-bg-red width-per-70" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                   aria-valuemax="100">70%</div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="plain-card">
@@ -77,21 +77,21 @@
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
-                  <p>$723</p>
+                  <!-- <p>$723</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Week</label>
-                  <p>$12,451</p>
+                  <!-- <p>$12,451</p> -->
                 </div>
                 <div class="col-4">
                   <label class="font-14">This Month</label>
-                  <p>$35,589</p>
+                  <!-- <p>$35,589</p> -->
                 </div>
               </div>
-              <div class="progress shadow-style">
+              <!-- <div class="progress shadow-style">
                 <div class="progress-bar l-bg-cyan width-per-55" role="progressbar" aria-valuenow="55" aria-valuemin="0"
                   aria-valuemax="100">55%</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
                 </button>
               </mat-menu>
             </div>
-            <div class="body">
+            <!-- <div class="body">
               <div class="row">
                 <div class="col-md-12 col-xl-4 d-flex flex-column justify-content-center">
                   <div class="ml-xl-3 m-b-20">
@@ -207,9 +207,9 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6 mt-3">
+                    <div class="col-md-6 mt-3">-->
                       <!-- chart -->
-                      <div class="recent-report__chart">
+                      <!--<div class="recent-report__chart">
                         <canvas baseChart class="chart" [data]="doughnutChartData" [labels]="doughnutChartLabels"
                           [options]="doughnutChartOptions" [legend]="doughnutChartLegend" [chartType]="doughnutChartType"
                           [colors]="doughnutChartColors"></canvas>
@@ -241,7 +241,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -268,7 +268,7 @@
                 </button>
               </mat-menu>
             </div>
-            <div class="list-body">
+            <!-- <div class="list-body">
               <ng-scrollbar style="height: 330px" visibility="hover">
                 <ul class="list-unstyled list-unstyled-noborder">
                   <li class="patient-group-list">
@@ -339,7 +339,7 @@
                   </li>
                 </ul>
               </ng-scrollbar>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -364,7 +364,7 @@
                 </button>
               </mat-menu>
             </div>
-            <div class="body">
+            <!-- <div class="body">
               <ng-scrollbar style="height: 330px" visibility="hover">
                 <div class="recent-comment">
                   <div class="notice-board">
@@ -419,7 +419,7 @@
                   </div>
                 </div>
               </ng-scrollbar>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -444,7 +444,7 @@
                 </button>
               </mat-menu>
             </div>
-            <div class="body">
+            <!-- <div class="body">
               <div class="sl-item sl-primary">
                 <div class="sl-content">
                   <small class="text-muted">
@@ -473,7 +473,7 @@
                   <p>Lorem ipsum dolor sit amet conse ctetur which ascing elit users.</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -500,7 +500,7 @@
                 </button>
               </mat-menu>
             </div>
-            <div class="tableBody">
+            <!-- <div class="tableBody">
               <div class="table-responsive">
                 <table class="table display product-overview mb-30" id="support_table">
                   <thead>
@@ -662,7 +662,7 @@
                   </tbody>
                 </table>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
