--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,17 @@
 
   box-shadow: none;
 }
+.inputfile{
+height: 40px;
+width: 214px;}
+.hightdata.ng-select.ng-select-single{
+  .ng-select-container {
+    height:40px;
+    min-height:40px;
+    font-size: 16px;
+    margin-bottom: 0; min-width: 200px;
+  }
+}
       /* Safari */
       @-webkit-keyframes spin {
         0% { -webkit-transform: rotate(0deg); }
